--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.456.0",
+    "moment": "^2.30.1",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-day-picker": "8.10.1",
